--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <h2 id="mainHeading"><u>10-Year Investment Performance</u></h2>
             <p id="testP" class="funParagraph">Over the past decade, SPY has consistently delivered positive returns for long-term investors. The bar chart below illustrates its average annual return:</p>
             <div class="chart-container">
-                <img src="C:\LaunchCode\HTML-Me-Something-Start-main\SNP10y.png" alt="SPY 10-Year ROI Chart">
+                <img src="https://www.dropbox.com/scl/fi/7txja967bvepbwx96czk1/SNP10y.png?rlkey=5yc4cezqzbxw063u2sxqv8rti&raw=1" alt="SPY 10-Year ROI Chart">
             </div>
             <p id="testP" class="funParagraph">Despite market fluctuations, SPY has remained a reliable choice for those seeking exposure to the U.S. stock market.</p>
             <p id="testP" class="funParagraph">This is a fun paragraph with matrix-style text &amp; entities like &lt;em&gt;italic&lt;/em&gt; and &lt;strong&gt;bold&lt;/strong&gt;.</p>
